--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -265,8 +265,24 @@
     background: url(https://i.imgur.com/YH2hlmA.png), -ms-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
     background: url(https://i.imgur.com/YH2hlmA.png), linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
     box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
-    overflow: hidden;
-    
+  }
+  #book .page::before, #book .page::after {
+    content: '';
+    display: block;
+    position: absolute;
+    background: url(https://i.imgur.com/YH2hlmA.png), -webkit-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+    background: url(https://i.imgur.com/YH2hlmA.png), -moz-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+    background: url(https://i.imgur.com/YH2hlmA.png), -ms-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+    background: url(https://i.imgur.com/YH2hlmA.png), linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+    box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
+    width: 100%;
+    height: 100%;
+  }
+  #book .page::before {
+    top: 5px;
+  }
+  #book .page::after {
+    top: 10px;
   }
   #book .page h2 {
     color: #34211a;
@@ -298,7 +314,7 @@
     <div class="left page">
       <div id="index">
         <h1>Bestiary</h1>
-        <h2>of Salem and the Known World</h2>
+        <h2>of magic-touched beings in Salem and the Known World</h2>
         <div class="list"></div>
       </div>
     </div>
