--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -265,6 +265,7 @@
     background: url(https://i.imgur.com/YH2hlmA.png), -ms-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
     background: url(https://i.imgur.com/YH2hlmA.png), linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
     box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
+    z-index: 2;
   }
   #book .page::before, #book .page::after {
     content: '';
@@ -280,9 +281,23 @@
   }
   #book .page::before {
     top: 5px;
+    z-index: 1;
+  }
+  #book .page.left::before {
+    left: -5px;
+  }
+  #book .page.left::after {
+    left: -10px;
+  }
+  #book .page.right::before {
+    right: -5px;
+  }
+  #book .page.right::after {
+    right: -10px;
   }
   #book .page::after {
     top: 10px;
+    z-index: 0;
   }
   #book .page h2 {
     color: #34211a;
